add test for cvxopt solver

--- a/SparseWeights-test.ipynb
+++ b/SparseWeights-test.ipynb
@@ -19,25 +19,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exampleName=\"cheburashka\"\n",
+    "exampleName=\"cheburashka\"\n",
     "# poses_folder=\"poses-2\"\n",
     "# poses_ind=7\n",
     "# clip_k=5\n",
     "# handle_num=11\n",
     "\n",
     "\n",
-    "exampleName=\"cow\"\n",
-    "poses_folder=\"poses-2\"\n",
-    "poses_ind=5\n",
-    "clip_k=7\n",
-    "handle_num=15\n",
+    "# exampleName=\"cow\"\n",
+    "# poses_folder=\"poses-2\"\n",
+    "# poses_ind=5\n",
+    "# clip_k=7\n",
+    "# handle_num=15\n",
     "\n",
     "\n",
-    "# exampleName=\"wolf\"\n",
-    "# poses_folder=\"poses-1\"\n",
-    "# poses_ind=2\n",
-    "# clip_k=18\n",
-    "# handle_num=21\n",
+    "exampleName=\"wolf\"\n",
+    "poses_folder=\"poses-1\"\n",
+    "poses_ind=2\n",
+    "clip_k=4\n",
+    "handle_num=21\n",
     "\n",
     "\n",
     "objective_choice=0\n",
@@ -46,7 +46,7 @@
     "weights = {\n",
     "           'W_sparse': 0.0,\n",
     "           'W_spatial': 0.0,\n",
-    "           'W_sum': 100000.0\n",
+    "           'W_sum': 10.0\n",
     "          }"
    ]
   },
@@ -59,9 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/poses-2/cow-1.obj', './models/cow-all/poses-2/cow-2.obj', './models/cow-all/poses-2/cow-3.obj', './models/cow-all/poses-2/cow-4.obj', './models/cow-all/poses-2/cow-5.obj', './models/cow-all/poses-2/cow-6.obj', './models/cow-all/poses-2/cow-7.obj']\n",
-      "(11666, 28)\n",
-      "(11666, 21)\n"
+      "['./models/wolf-all/poses-1/wolf-1.obj', './models/wolf-all/poses-1/wolf-2.obj', './models/wolf-all/poses-1/wolf-3.obj', './models/wolf-all/poses-1/wolf-4.obj', './models/wolf-all/poses-1/wolf-5.obj', './models/wolf-all/poses-1/wolf-6.obj']\n",
+      "(5075, 24)\n",
+      "(5075, 18)\n"
      ]
     }
    ],
@@ -100,28 +100,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15, 84)\n",
-      "(11666, 15)\n",
-      "[[0.20570602 0.00042219 0.02655054 0.15167153 0.00018981 0.00004767\n",
-      "  0.00030539 0.00002423 0.02001831 0.00000105 0.00102998 0.14445015\n",
-      "  0.00045419 0.44910447 0.00002447]\n",
-      " [0.21555833 0.0004373  0.02679411 0.16466939 0.00016431 0.00004939\n",
-      "  0.00029969 0.00002367 0.01424946 0.00000119 0.00101018 0.15187666\n",
-      "  0.00048589 0.42435294 0.00002749]\n",
-      " [0.24024097 0.00040106 0.02997077 0.15734726 0.00013956 0.00004676\n",
-      "  0.00030475 0.00002278 0.01438586 0.00000122 0.00103343 0.11445163\n",
-      "  0.00051674 0.44110425 0.00003297]]\n",
-      "[[0.20570602 0.         0.02655054 0.15167153 0.         0.\n",
-      "  0.         0.         0.02001831 0.         0.00102998 0.14445015\n",
-      "  0.         0.44910447 0.        ]\n",
-      " [0.21555833 0.         0.02679411 0.16466939 0.         0.\n",
-      "  0.         0.         0.01424946 0.         0.00101018 0.15187666\n",
-      "  0.         0.42435294 0.        ]\n",
-      " [0.24024097 0.         0.02997077 0.15734726 0.         0.\n",
-      "  0.         0.         0.01438586 0.         0.00103343 0.11445163\n",
-      "  0.         0.44110425 0.        ]]\n",
-      "[ 9  7 14  5  4  6  1 12 24 22 29 20 19 21 16 27 39 37 44 35 34 36 31 42\n",
-      " 54 52 59 50 49 51 46 57 69 74 67 65 64 66 61 72 84 82 89 80 79]\n",
+      "(21, 72)\n",
+      "(5075, 21)\n",
+      "[[0.1589514  0.0000593  0.00474596 0.00048292 0.0000278  0.03343458\n",
+      "  0.07699286 0.17446554 0.03199314 0.00009963 0.01256247 0.12470764\n",
+      "  0.09002658 0.0000002  0.00000122 0.00001448 0.01316137 0.00123948\n",
+      "  0.00000147 0.00000064 0.27703134]\n",
+      " [0.15856047 0.00005942 0.00472487 0.0004812  0.00002775 0.03355878\n",
+      "  0.07708042 0.17432981 0.03208895 0.00009982 0.01256983 0.12475939\n",
+      "  0.08994991 0.0000002  0.00000122 0.00001445 0.01320413 0.00123941\n",
+      "  0.00000147 0.00000064 0.27724787]\n",
+      " [0.15566619 0.00006021 0.00463952 0.00047399 0.00002755 0.03405925\n",
+      "  0.07742135 0.17335098 0.03247172 0.00010021 0.01264691 0.12530878\n",
+      "  0.08969101 0.0000002  0.00000124 0.00001417 0.01345853 0.00124074\n",
+      "  0.00000144 0.00000064 0.27936539]]\n",
+      "[[0.1589514  0.         0.         0.         0.         0.\n",
+      "  0.         0.17446554 0.         0.         0.         0.12470764\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.27703134]\n",
+      " [0.15856047 0.         0.         0.         0.         0.\n",
+      "  0.         0.17432981 0.         0.         0.         0.12475939\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.27724787]\n",
+      " [0.15566619 0.         0.         0.         0.         0.\n",
+      "  0.         0.17335098 0.         0.         0.         0.12530878\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.27936539]]\n",
+      "[13 19 14 18 15  4  1  9  3 17  2 10 16  8  5  6 12 34 40 35 39 36 25 22\n",
+      " 30 24 38 23 31 37 29 26 27 33 55 61 56 60 57 46 43 51 45 59 44 52 58 50\n",
+      " 47 48 54 76 82 77 81 78 67 64 72 66 80 65 73]\n",
       "0.0\n"
      ]
     }
@@ -172,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "708.6870049193496\n"
+      "25.309374465859957\n"
      ]
     }
    ],
@@ -190,8 +197,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.766786638470725e-05\n",
-      "0.07533573276941448\n"
+      "1.4503569839497157e-12\n",
+      "2.90071396789943e-09\n"
      ]
     }
    ],
@@ -212,15 +219,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.155936486433758\n",
-      "16311.872972867513\n",
-      "(11666, 28)\n",
-      "(11666, 21)\n",
+      "5.526594769261788\n",
+      "11053.189538523577\n",
+      "(5075, 24)\n",
+      "(5075, 18)\n",
       "True\n",
-      "4173.383052854259\n",
-      "using time:  68.27641606330872\n",
-      "0.17261263587000608\n",
-      "345.2252717400123\n"
+      "44649.23869861087\n",
+      "using time:  154.9959900379181\n",
+      "0.2747330517534173\n",
+      "549.4661035068343\n"
      ]
     }
    ],
@@ -256,18 +263,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.20566156 0.         0.02670986 0.15168828 0.         0.\n",
-      "  0.         0.         0.0201827  0.         0.00251751 0.1444752\n",
-      "  0.         0.44878519 0.        ]\n",
-      " [0.21550269 0.         0.02695331 0.1646714  0.         0.\n",
-      "  0.         0.         0.0144202  0.         0.00251763 0.15189328\n",
-      "  0.         0.4240616  0.        ]\n",
-      " [0.24015728 0.         0.0301265  0.15735741 0.         0.\n",
-      "  0.         0.         0.01455602 0.         0.00251787 0.11451047\n",
-      "  0.         0.44079388 0.        ]]\n",
+      "[[0.09262351 0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.         0.         0.0018219\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.09289035 0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.         0.         0.00183351\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.09242546 0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.         0.         0.00087715\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.        ]]\n",
       "0.0\n",
-      "11666.30519917252\n",
-      "0.15362167679813707\n"
+      "605.1229354899014\n",
+      "1907.2672995387118\n"
      ]
     }
    ],
@@ -287,8 +297,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.975248715902671e-09\n",
-      "0.0 0.9520340177867929\n"
+      "0.789214054981536\n",
+      "0.0 0.7721513662762625\n"
      ]
     }
    ],
@@ -337,9 +347,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/cow.DMAT']\n",
-      "(11666, 15)\n",
-      "1.5653958587979453e-28\n"
+      "['./models/wolf-all/wolf.DMAT']\n",
+      "(5075, 21)\n",
+      "5.575027928616619e-29\n"
      ]
     }
    ],
@@ -363,21 +373,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/poses-2/cow-1.Tmat', './models/cow-all/poses-2/cow-2.Tmat', './models/cow-all/poses-2/cow-3.Tmat', './models/cow-all/poses-2/cow-4.Tmat', './models/cow-all/poses-2/cow-5.Tmat', './models/cow-all/poses-2/cow-6.Tmat', './models/cow-all/poses-2/cow-7.Tmat']\n",
-      "(15, 84)\n",
-      "(7, 15, 12)\n",
+      "['./models/wolf-all/poses-1/wolf-1.Tmat', './models/wolf-all/poses-1/wolf-2.Tmat', './models/wolf-all/poses-1/wolf-3.Tmat', './models/wolf-all/poses-1/wolf-4.Tmat', './models/wolf-all/poses-1/wolf-5.Tmat', './models/wolf-all/poses-1/wolf-6.Tmat']\n",
+      "(21, 72)\n",
+      "(6, 21, 12)\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
-      "[[ 0.998956    0.0322376   0.0323555  -2.24837   ]\n",
-      " [-0.0456047   0.664913    0.745527   27.1422    ]\n",
-      " [ 0.00252045 -0.746225    0.665689   53.4901    ]]\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]]\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]]\n",
+      "[[ 0.963816   0.259295   0.0618401  0.769371 ]\n",
+      " [-0.215014   0.893333  -0.394619   1.05772  ]\n",
+      " [-0.157567   0.367044   0.916761   2.30098  ]]\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
@@ -387,9 +391,12 @@
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
-      "[[ 0.99999923 -0.00000004  0.00000002]\n",
-      " [-0.00000004  1.00000031 -0.00000012]\n",
-      " [ 0.00000002 -0.00000012  0.99999923]]\n"
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[ 0.99999966 -0.00000045 -0.00000019]\n",
+      " [-0.00000045  0.99999904  0.00000028]\n",
+      " [-0.00000019  0.00000028  0.99999908]]\n"
      ]
     }
    ],
