--- a/SparseWeightsAlternating-test.ipynb
+++ b/SparseWeightsAlternating-test.ipynb
@@ -26,18 +26,18 @@
     "# handle_num=11\n",
     "\n",
     "\n",
-    "exampleName=\"cow\"\n",
-    "poses_folder=\"poses-2\"\n",
-    "poses_ind=5\n",
-    "clip_k=7\n",
-    "handle_num=15\n",
+    "# exampleName=\"cow\"\n",
+    "# poses_folder=\"poses-2\"\n",
+    "# poses_ind=5\n",
+    "# clip_k=7\n",
+    "# handle_num=15\n",
     "\n",
     "\n",
-    "# exampleName=\"wolf\"\n",
-    "# poses_folder=\"poses-1\"\n",
-    "# poses_ind=2\n",
-    "# clip_k=18\n",
-    "# handle_num=21\n",
+    "exampleName=\"wolf\"\n",
+    "poses_folder=\"poses-1\"\n",
+    "poses_ind=2\n",
+    "clip_k=18\n",
+    "handle_num=21\n",
     "\n",
     "\n",
     "objective_choice=0\n",
@@ -59,9 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/poses-2/cow-1.obj', './models/cow-all/poses-2/cow-2.obj', './models/cow-all/poses-2/cow-3.obj', './models/cow-all/poses-2/cow-4.obj', './models/cow-all/poses-2/cow-5.obj', './models/cow-all/poses-2/cow-6.obj', './models/cow-all/poses-2/cow-7.obj']\n",
-      "(11666, 28)\n",
-      "(11666, 21)\n"
+      "['./models/wolf-all/poses-1/wolf-1.obj', './models/wolf-all/poses-1/wolf-2.obj', './models/wolf-all/poses-1/wolf-3.obj', './models/wolf-all/poses-1/wolf-4.obj', './models/wolf-all/poses-1/wolf-5.obj', './models/wolf-all/poses-1/wolf-6.obj']\n",
+      "(5075, 24)\n",
+      "(5075, 18)\n"
      ]
     }
    ],
@@ -100,28 +100,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15, 84)\n",
-      "(11666, 15)\n",
-      "[[0.20570602 0.00042219 0.02655054 0.15167153 0.00018981 0.00004767\n",
-      "  0.00030539 0.00002423 0.02001831 0.00000105 0.00102998 0.14445015\n",
-      "  0.00045419 0.44910447 0.00002447]\n",
-      " [0.21555833 0.0004373  0.02679411 0.16466939 0.00016431 0.00004939\n",
-      "  0.00029969 0.00002367 0.01424946 0.00000119 0.00101018 0.15187666\n",
-      "  0.00048589 0.42435294 0.00002749]\n",
-      " [0.24024097 0.00040106 0.02997077 0.15734726 0.00013956 0.00004676\n",
-      "  0.00030475 0.00002278 0.01438586 0.00000122 0.00103343 0.11445163\n",
-      "  0.00051674 0.44110425 0.00003297]]\n",
-      "[[0.20570602 0.         0.02655054 0.15167153 0.         0.\n",
-      "  0.         0.         0.02001831 0.         0.00102998 0.14445015\n",
-      "  0.         0.44910447 0.        ]\n",
-      " [0.21555833 0.         0.02679411 0.16466939 0.         0.\n",
-      "  0.         0.         0.01424946 0.         0.00101018 0.15187666\n",
-      "  0.         0.42435294 0.        ]\n",
-      " [0.24024097 0.         0.02997077 0.15734726 0.         0.\n",
-      "  0.         0.         0.01438586 0.         0.00103343 0.11445163\n",
-      "  0.         0.44110425 0.        ]]\n",
-      "[ 9  7 14  5  4  6  1 12 24 22 29 20 19 21 16 27 39 37 44 35 34 36 31 42\n",
-      " 54 52 59 50 49 51 46 57 69 74 67 65 64 66 61 72 84 82 89 80 79]\n",
+      "(21, 72)\n",
+      "(5075, 21)\n",
+      "[[0.1589514  0.0000593  0.00474596 0.00048292 0.0000278  0.03343458\n",
+      "  0.07699286 0.17446554 0.03199314 0.00009963 0.01256247 0.12470764\n",
+      "  0.09002658 0.0000002  0.00000122 0.00001448 0.01316137 0.00123948\n",
+      "  0.00000147 0.00000064 0.27703134]\n",
+      " [0.15856047 0.00005942 0.00472487 0.0004812  0.00002775 0.03355878\n",
+      "  0.07708042 0.17432981 0.03208895 0.00009982 0.01256983 0.12475939\n",
+      "  0.08994991 0.0000002  0.00000122 0.00001445 0.01320413 0.00123941\n",
+      "  0.00000147 0.00000064 0.27724787]\n",
+      " [0.15566619 0.00006021 0.00463952 0.00047399 0.00002755 0.03405925\n",
+      "  0.07742135 0.17335098 0.03247172 0.00010021 0.01264691 0.12530878\n",
+      "  0.08969101 0.0000002  0.00000124 0.00001417 0.01345853 0.00124074\n",
+      "  0.00000144 0.00000064 0.27936539]]\n",
+      "[[0.1589514  0.0000593  0.00474596 0.00048292 0.0000278  0.03343458\n",
+      "  0.07699286 0.17446554 0.03199314 0.00009963 0.01256247 0.12470764\n",
+      "  0.09002658 0.         0.         0.00001448 0.01316137 0.00123948\n",
+      "  0.00000147 0.         0.27703134]\n",
+      " [0.15856047 0.00005942 0.00472487 0.0004812  0.00002775 0.03355878\n",
+      "  0.07708042 0.17432981 0.03208895 0.00009982 0.01256983 0.12475939\n",
+      "  0.08994991 0.         0.         0.00001445 0.01320413 0.00123941\n",
+      "  0.00000147 0.         0.27724787]\n",
+      " [0.15566619 0.00006021 0.00463952 0.00047399 0.00002755 0.03405925\n",
+      "  0.07742135 0.17335098 0.03247172 0.00010021 0.01264691 0.12530878\n",
+      "  0.08969101 0.         0.         0.00001417 0.01345853 0.00124074\n",
+      "  0.00000144 0.         0.27936539]]\n",
+      "[ 13  19  14  34  40  35  55  61  56  76  82  77  97 103  98 118 124 119\n",
+      " 139 145 140 160 166 161 181 187 182 202 208 203 223 229 224 244 250 245\n",
+      " 265 271 266 286 292 287 307 313 308 328 334 329 349 355 350 370 376 371\n",
+      " 391 397 392 412 418 413 433 439 434]\n",
       "0.0\n"
      ]
     }
@@ -172,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "708.6870049193496\n"
+      "25.309374465859957\n"
      ]
     }
    ],
@@ -190,8 +198,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.766786638470725e-05\n",
-      "0.07533573276941448\n"
+      "1.4503569839497157e-12\n",
+      "2.90071396789943e-09\n"
      ]
     }
    ],
@@ -212,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.155936486433758\n",
-      "16311.872972867513\n"
+      "0.7629857489275117\n",
+      "1525.9714978550232\n"
      ]
     }
    ],
@@ -233,54 +241,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11666, 28)\n",
-      "(11666, 21)\n",
+      "(5075, 24)\n",
+      "(5075, 18)\n",
       "####loop:  0\n",
       "####solve mixing weights\n",
-      "True\n",
-      "4173.3830672145705\n",
+      "False\n",
+      "738.7778275266768\n",
       "####solve endmembers\n",
       "True\n",
-      "####endmember changes:  [1998.62402881  568.77727215 2188.07340524 1038.27295473    1.30911247\n",
-      "    3.59887847   97.90188146    0.32683428  609.48841298    0.\n",
-      " 3244.250178    585.1506228  2910.43581325 1660.62291916    0.07209785]\n",
+      "####endmember changes:  [ 314.42655213   49.03000395  788.35823754  459.80808113   23.16898584\n",
+      " 1358.09474698  985.90560855  147.00349684 1581.69076286   68.07383151\n",
+      " 1502.14858665  875.10228886  946.04288833    0.00730196    0.68480588\n",
+      "   15.57439939  869.15548237  420.91991515    3.76489291    1.9707552\n",
+      "  305.18604976]\n",
       "####loop:  1\n",
       "####solve mixing weights\n",
-      "True\n",
-      "207.4278844979567\n",
+      "False\n",
+      "73.97711638900105\n",
       "####solve endmembers\n",
       "True\n",
-      "####endmember changes:  [ 19.72368518  14.02149064 345.04338341  19.38049273   0.00434099\n",
-      "   0.03607512   4.1472472    0.         147.49194898   0.\n",
-      "  61.1225285   21.19634171  55.78902481  27.960639     0.        ]\n",
+      "####endmember changes:  [ 81.92509684   3.29946168  72.12123962  33.27596023   2.1514948\n",
+      " 155.63448652 148.48613201  40.1193665  191.37891483   4.33869518\n",
+      " 100.15550154 196.67904948 121.7271522    0.00036443   0.07127127\n",
+      "   1.13257946  97.65706982  35.68553167   0.255598     0.12276258\n",
+      "  65.79947022]\n",
       "####loop:  2\n",
       "####solve mixing weights\n",
-      "True\n",
-      "141.3587148648052\n",
+      "False\n",
+      "51.47641474412458\n",
       "####solve endmembers\n",
       "True\n",
-      "####endmember changes:  [ 15.37414723  14.35796449 154.71366502  21.58737978   0.01335737\n",
-      "   0.05488144   4.25499403   0.         118.78742649   0.\n",
-      "  43.24399251  17.50922161  38.40517091  24.80907225   0.        ]\n",
+      "####endmember changes:  [40.44148096  0.72474831 19.75570908  7.73484531  0.52100736 47.44542778\n",
+      " 48.53821434 31.12794401 44.12562889  1.0238992  25.17440466 73.84406498\n",
+      " 56.11068713  0.00007805  0.0184163   0.22991111 29.22146794  8.74254468\n",
+      "  0.0575129   0.02571052 25.31016091]\n",
       "####loop:  3\n",
       "####solve mixing weights\n",
-      "True\n",
-      "130.2137301388305\n",
+      "False\n",
+      "41.55901330368765\n",
       "####solve endmembers\n",
       "True\n",
-      "####endmember changes:  [ 2.59952434  1.06872094  5.29141487  8.03133936  0.00076181  0.000896\n",
-      "  0.30964245  0.          9.42161697  0.          2.80270275 11.10554691\n",
-      "  2.36648624  3.803096    0.        ]\n",
+      "####endmember changes:  [ 46.21402442   1.46128684  46.59621909  17.9984464    1.14247221\n",
+      "  97.91253869  74.68686104  16.7180916  110.99791058   2.20737032\n",
+      "  57.36323831 103.73847446  78.81522159   0.00018405   0.04188376\n",
+      "   0.48596291  63.85392812  20.42010166   0.12144784   0.04769036\n",
+      "  33.66980572]\n",
       "####loop:  4\n",
       "####solve mixing weights\n",
-      "True\n",
-      "128.80528883387439\n",
+      "False\n",
+      "35.70866131754082\n",
       "####solve endmembers\n",
       "True\n",
-      "####endmember changes:  [2.69409948 1.44946123 6.91219181 5.72795464 0.00106222 0.00183175\n",
-      " 0.40291529 0.         8.43126158 0.         3.71891294 8.89348123\n",
-      " 3.18703526 3.90314923 0.        ]\n",
-      "using time:  617.3830189704895\n"
+      "####endmember changes:  [20.79917499  0.22970575  7.50987822  2.95688628  0.18372719 17.63152322\n",
+      " 20.04452918 23.47048563 17.23384499  0.34810935  9.69202971 23.64995553\n",
+      " 23.99859325  0.00003007  0.00700698  0.07563889 11.21018927  3.30614406\n",
+      "  0.01933356  0.00684188 15.69709838]\n",
+      "using time:  4778.807326793671\n"
      ]
     }
    ],
@@ -305,8 +321,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.03027733205742391\n",
-      "60.55466411484781\n"
+      "0.023743661502822002\n",
+      "47.487323005643994\n"
      ]
     }
    ],
@@ -326,18 +342,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.20547409 0.         0.02717891 0.15141601 0.         0.\n",
-      "  0.         0.         0.02032394 0.         0.00251736 0.14431099\n",
-      "  0.         0.44877751 0.        ]\n",
-      " [0.2153823  0.         0.02711883 0.16447858 0.         0.\n",
-      "  0.         0.         0.01443057 0.         0.00251752 0.15184779\n",
-      "  0.         0.42422309 0.        ]\n",
-      " [0.24021859 0.         0.0294954  0.15733729 0.         0.\n",
-      "  0.         0.         0.01461049 0.         0.00251787 0.1146578\n",
-      "  0.         0.44116064 0.        ]]\n",
+      "[[0.15893323 0.00001608 0.00471655 0.00063381 0.00005465 0.03341662\n",
+      "  0.07697542 0.17444708 0.03196736 0.00011715 0.01253146 0.12469068\n",
+      "  0.09000966 0.         0.         0.00002985 0.01313819 0.00130423\n",
+      "  0.00000338 0.         0.27701311]\n",
+      " [0.1585423  0.00001626 0.00469566 0.00063173 0.00005464 0.03354081\n",
+      "  0.07706304 0.17431137 0.03206294 0.00011746 0.01253934 0.12474247\n",
+      "  0.08993302 0.         0.         0.00002981 0.0131809  0.00130374\n",
+      "  0.00000337 0.         0.27722964]\n",
+      " [0.15564725 0.00001642 0.00460948 0.00063405 0.00005401 0.03404091\n",
+      "  0.07740302 0.17333175 0.03244545 0.00011841 0.01261362 0.12529105\n",
+      "  0.08967342 0.         0.         0.00003009 0.01343407 0.00130554\n",
+      "  0.00000336 0.         0.2793464 ]]\n",
       "0.0\n",
-      "11665.992289510848\n",
-      "0.0016879578247123719\n"
+      "5075.001962268251\n",
+      "0.0002873412134994578\n"
      ]
     }
    ],
@@ -357,8 +376,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.17035550923072e-11\n",
-      "0.0 0.9497134763901076\n"
+      "1.1889981248253427e-11\n",
+      "0.0 0.934863730899431\n"
      ]
     }
    ],
@@ -400,9 +419,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/cow.DMAT']\n",
-      "(11666, 15)\n",
-      "1.5653958587979453e-28\n"
+      "['./models/wolf-all/wolf.DMAT']\n",
+      "(5075, 21)\n",
+      "5.575027928616619e-29\n"
      ]
     }
    ],
@@ -426,30 +445,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./models/cow-all/poses-2/cow-1.Tmat', './models/cow-all/poses-2/cow-2.Tmat', './models/cow-all/poses-2/cow-3.Tmat', './models/cow-all/poses-2/cow-4.Tmat', './models/cow-all/poses-2/cow-5.Tmat', './models/cow-all/poses-2/cow-6.Tmat', './models/cow-all/poses-2/cow-7.Tmat']\n",
-      "(15, 84)\n",
-      "(7, 15, 12)\n",
+      "['./models/wolf-all/poses-1/wolf-1.Tmat', './models/wolf-all/poses-1/wolf-2.Tmat', './models/wolf-all/poses-1/wolf-3.Tmat', './models/wolf-all/poses-1/wolf-4.Tmat', './models/wolf-all/poses-1/wolf-5.Tmat', './models/wolf-all/poses-1/wolf-6.Tmat']\n",
+      "(21, 72)\n",
+      "(6, 21, 12)\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
+      "[[ 0.972544   0.227903  -0.0470963  0.885167 ]\n",
+      " [-0.154564   0.783858   0.601396  -0.609624 ]\n",
+      " [ 0.173977  -0.577605   0.797562   0.81869  ]]\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
       "[[1. 0. 0. 0.]\n",
       " [0. 1. 0. 0.]\n",
       " [0. 0. 1. 0.]]\n",
-      "[[  0.965808   0.145115  -0.21484  -27.4451  ]\n",
-      " [ -0.210922   0.921663  -0.325653 -18.4378  ]\n",
-      " [  0.150753   0.359833   0.920757 -33.9079  ]]\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]]\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]]\n",
+      "[[ 0.84512     0.00489601 -0.534555   -1.82441   ]\n",
+      " [ 0.267749    0.861615    0.431196    1.16584   ]\n",
+      " [ 0.462692   -0.507538    0.726857   -0.924649  ]]\n",
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n"
@@ -512,16 +528,6 @@
    "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n",
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
