update the solver printout info

--- a/SparseWeights_CVXOPT-test - cheburashka.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka.ipynb
@@ -109,8 +109,6 @@
       "  0.         0.         0.         0.         0.        ]\n",
       " [0.74685587 0.1146399  0.03846723 0.05108695 0.         0.\n",
       "  0.         0.         0.         0.         0.        ]]\n",
-      "[ 9 10  4  6  5  7  8 20 21 15 17 16 18 19 31 32 26 28 27 29 30 42 43 39\n",
-      " 37 41 40 38 53 54 50 48 52]\n",
       "0.0\n"
      ]
     }
@@ -134,12 +132,10 @@
     "print (endmembers.shape)\n",
     "print (mixing_weights.shape)\n",
     "print (mixing_weights[:3])\n",
+    "## grad_zero_indices is for col-major\n",
     "mixing_weights_clip, grad_zero_indices=clip_first_k_values(mixing_weights, clip_k)\n",
     "print (mixing_weights_clip[:3])\n",
-    "\n",
-    "print (grad_zero_indices[:len(endmembers)*3])\n",
-    "\n",
-    "print (mixing_weights_clip.ravel()[grad_zero_indices].sum())"
+    "print (col_major(mixing_weights_clip)[grad_zero_indices].sum())"
    ]
   },
   {
@@ -194,104 +190,57 @@
       "6669 11 11\n",
       "W_spatial 0.0\n",
       "     pcost       dcost       gap    pres   dres\n",
-      " 0: -2.1297e+05 -3.6237e+05  9e+05  3e+00  5e-14\n",
-      " 1: -2.1089e+05 -3.0915e+05  3e+05  8e-01  4e-14\n",
-      " 2: -2.0461e+05 -2.6645e+05  2e+05  4e-01  4e-14\n",
-      " 3: -1.9643e+05 -2.3490e+05  1e+05  2e-01  4e-14\n",
-      " 4: -1.9058e+05 -2.1792e+05  8e+04  1e-01  4e-14\n",
-      " 5: -1.8489e+05 -2.0657e+05  6e+04  8e-02  4e-14\n",
-      " 6: -1.8039e+05 -1.9488e+05  5e+04  5e-02  4e-14\n",
-      " 7: -1.7491e+05 -1.8307e+05  4e+04  3e-02  4e-14\n",
-      " 8: -1.7122e+05 -1.7623e+05  3e+04  2e-02  4e-14\n",
-      " 9: -1.6834e+05 -1.6980e+05  3e+04  2e-02  4e-14\n",
-      "10: -1.6417e+05 -1.5992e+05  3e+04  1e-02  4e-14\n",
-      "11: -1.6090e+05 -1.5185e+05  3e+04  1e-02  4e-14\n",
-      "12: -1.5784e+05 -1.4360e+05  3e+04  1e-02  4e-14\n",
-      "13: -1.5540e+05 -1.3611e+05  3e+04  9e-03  4e-14\n",
-      "14: -1.5299e+05 -1.2886e+05  3e+04  9e-03  4e-14\n",
-      "15: -1.5138e+05 -1.2150e+05  4e+04  8e-03  4e-14\n",
-      "16: -1.5065e+05 -1.1293e+05  4e+04  8e-03  5e-14\n",
-      "17: -1.5060e+05 -9.8776e+04  4e+04  8e-03  5e-14\n",
-      "18: -1.5038e+05 -8.2051e+04  5e+04  7e-03  5e-14\n",
-      "19: -1.4948e+05 -3.0726e+04  6e+04  7e-03  5e-14\n",
-      "20: -1.4190e+05  1.9389e+05  8e+04  6e-03  5e-14\n",
-      "21: -1.2270e+05  4.8045e+05  1e+05  6e-03  5e-14\n",
-      "22: -1.0477e+05  6.6403e+05  2e+05  6e-03  5e-14\n",
-      "23: -7.5917e+04  9.2866e+05  2e+05  6e-03  5e-14\n",
-      "24: -5.6078e+04  1.1829e+06  3e+05  6e-03  5e-14\n",
-      "25: -4.3810e+04  1.4815e+06  3e+05  6e-03  5e-14\n",
-      "26: -3.6951e+04  1.8624e+06  4e+05  5e-03  5e-14\n",
-      "27: -1.9185e+04  2.3810e+06  5e+05  5e-03  5e-14\n",
-      "28:  9.3293e+03  3.0173e+06  6e+05  5e-03  6e-14\n",
-      "29:  5.6040e+04  3.7687e+06  7e+05  5e-03  6e-14\n",
-      "30:  1.4284e+05  4.9012e+06  1e+06  5e-03  6e-14\n",
-      "31:  1.7645e+05  5.5057e+06  1e+06  5e-03  6e-14\n",
-      "32:  2.8809e+05  7.4762e+06  1e+06  5e-03  6e-14\n",
-      "33:  2.9625e+05  8.3655e+06  2e+06  5e-03  6e-14\n",
-      "34:  3.4018e+05  1.0514e+07  2e+06  5e-03  6e-14\n",
-      "35:  3.4960e+05  1.3288e+07  2e+06  5e-03  7e-14\n",
-      "36:  4.7529e+05  1.7980e+07  3e+06  5e-03  7e-14\n",
-      "37:  6.9054e+05  2.3697e+07  4e+06  5e-03  8e-14\n",
-      "38:  9.1884e+05  2.8545e+07  5e+06  5e-03  8e-14\n",
-      "39:  9.2991e+05  2.9153e+07  5e+06  5e-03  8e-14\n",
-      "40:  9.5243e+05  2.9976e+07  5e+06  5e-03  8e-14\n",
-      "41:  9.8839e+05  3.1089e+07  5e+06  5e-03  8e-14\n",
-      "42:  1.0568e+06  3.3034e+07  6e+06  5e-03  8e-14\n",
-      "43:  1.1059e+06  3.4295e+07  6e+06  5e-03  8e-14\n",
-      "44:  1.3089e+06  3.8975e+07  7e+06  5e-03  9e-14\n",
-      "45:  1.4830e+06  4.2418e+07  7e+06  5e-03  9e-14\n",
-      "46:  2.2022e+06  5.4090e+07  9e+06  5e-03  1e-13\n",
-      "47:  2.4222e+06  5.7138e+07  1e+07  5e-03  1e-13\n",
-      "48:  2.5195e+06  5.8423e+07  1e+07  5e-03  1e-13\n",
-      "49:  4.0697e+06  7.5738e+07  1e+07  5e-03  1e-13\n",
-      "50:  7.8339e+06  1.0520e+08  2e+07  4e-03  2e-13\n",
-      "51:  1.6547e+07  1.4970e+08  3e+07  4e-03  3e-13\n",
-      "52:  1.7007e+07  1.5165e+08  3e+07  4e-03  3e-13\n",
-      "53:  2.0453e+07  1.6482e+08  4e+07  4e-03  3e-13\n",
-      "54:  2.5527e+07  1.8186e+08  4e+07  4e-03  3e-13\n",
-      "55:  3.2743e+07  2.0353e+08  5e+07  4e-03  3e-13\n",
-      "56:  3.5595e+07  2.1331e+08  5e+07  4e-03  3e-13\n",
-      "57:  3.9776e+07  2.2771e+08  5e+07  4e-03  3e-13\n",
-      "58:  5.2386e+07  2.6697e+08  6e+07  3e-03  3e-13\n",
-      "59:  6.2676e+07  2.9659e+08  7e+07  3e-03  3e-13\n",
-      "60:  6.6978e+07  3.0822e+08  8e+07  3e-03  3e-13\n",
-      "61:  7.4756e+07  3.2804e+08  8e+07  3e-03  3e-13\n",
-      "62:  8.1769e+07  3.4706e+08  9e+07  3e-03  3e-13\n",
-      "63:  9.4313e+07  3.7761e+08  1e+08  3e-03  3e-13\n",
-      "64:  9.8117e+07  3.8682e+08  1e+08  3e-03  3e-13\n",
-      "65:  1.0445e+08  4.0405e+08  1e+08  3e-03  3e-13\n",
-      "66:  1.0806e+08  4.2277e+08  1e+08  3e-03  3e-13\n",
-      "67:  1.1760e+08  4.6829e+08  1e+08  3e-03  4e-13\n",
-      "68:  1.4819e+08  5.6445e+08  1e+08  3e-03  4e-13\n",
-      "69:  1.5535e+08  5.8203e+08  2e+08  3e-03  4e-13\n",
-      "70:  1.7327e+08  6.4674e+08  2e+08  2e-03  5e-13\n",
-      "71:  1.8359e+08  6.7123e+08  2e+08  2e-03  5e-13\n",
-      "72:  2.5149e+08  8.0633e+08  2e+08  2e-03  6e-13\n",
-      "73:  3.9725e+08  9.8004e+08  3e+08  2e-03  7e-13\n",
-      "74:  5.3666e+08  1.0885e+09  3e+08  1e-03  7e-13\n",
-      "75:  5.9245e+08  1.1141e+09  3e+08  1e-03  7e-13\n",
-      "76:  6.6632e+08  1.1476e+09  3e+08  1e-03  7e-13\n",
-      "77:  6.7723e+08  1.1641e+09  3e+08  1e-03  7e-13\n",
-      "78:  9.8284e+08  1.3870e+09  4e+08  6e-04  1e-12\n",
-      "79:  1.4787e+09  1.5482e+09  4e+07  7e-05  3e-12\n",
-      "80:  1.5535e+09  1.5602e+09  7e+06  8e-06  3e-12\n",
-      "81:  1.5562e+09  1.5602e+09  6e+06  6e-06  3e-12\n",
-      "82:  1.5591e+09  1.5608e+09  4e+06  4e-06  2e-12\n",
-      "83:  1.5609e+09  1.5611e+09  3e+06  2e-06  2e-12\n",
-      "84:  1.5614e+09  1.5615e+09  3e+06  2e-06  1e-12\n",
-      "85:  1.5617e+09  1.5615e+09  2e+06  1e-06  1e-12\n",
-      "86:  1.5623e+09  1.5617e+09  2e+06  8e-07  1e-12\n",
-      "87:  1.5628e+09  1.5626e+09  3e+05  9e-08  1e-12\n",
-      "88:  1.5628e+09  1.5627e+09  2e+05  6e-08  9e-13\n",
-      "89:  1.5628e+09  1.5628e+09  7e+04  2e-08  8e-13\n",
-      "90:  1.5628e+09  1.5628e+09  4e+04  1e-08  8e-13\n",
-      "91:  1.5628e+09  1.5628e+09  1e+04  3e-09  8e-13\n",
-      "92:  1.5628e+09  1.5628e+09  3e+03  8e-10  8e-13\n",
-      "93:  1.5628e+09  1.5628e+09  2e+02  5e-11  8e-13\n",
+      " 0: -5.5451e+04 -1.5044e+05  4e+05  2e+00  1e-14\n",
+      " 1: -5.4688e+04 -9.9552e+04  8e+04  3e-01  1e-14\n",
+      " 2: -5.2811e+04 -8.0798e+04  5e+04  1e-01  9e-15\n",
+      " 3: -5.1865e+04 -6.8277e+04  3e+04  6e-02  6e-15\n",
+      " 4: -5.1527e+04 -6.0842e+04  2e+04  3e-02  5e-15\n",
+      " 5: -5.1472e+04 -6.0051e+04  2e+04  3e-02  5e-15\n",
+      " 6: -5.1370e+04 -5.7435e+04  2e+04  3e-02  5e-15\n",
+      " 7: -5.0381e+04 -4.7021e+04  2e+04  2e-02  5e-15\n",
+      " 8: -4.6497e+04 -3.1541e+04  2e+04  2e-02  5e-15\n",
+      " 9: -4.3283e+04 -1.8770e+04  2e+04  2e-02  5e-15\n",
+      "10: -3.8548e+04 -3.5627e+03  2e+04  2e-02  5e-15\n",
+      "11: -3.6975e+04  1.5849e+04  3e+04  1e-02  5e-15\n",
+      "12: -3.5543e+04  3.4628e+04  3e+04  1e-02  5e-15\n",
+      "13: -3.1714e+04  6.6733e+04  4e+04  1e-02  5e-15\n",
+      "14: -2.6139e+04  1.2154e+05  5e+04  1e-02  5e-15\n",
+      "15: -2.0067e+04  1.9706e+05  7e+04  1e-02  5e-15\n",
+      "16: -1.2020e+04  2.7633e+05  8e+04  1e-02  5e-15\n",
+      "17:  3.8137e+03  3.8498e+05  1e+05  1e-02  5e-15\n",
+      "18:  3.5718e+04  5.3858e+05  2e+05  1e-02  5e-15\n",
+      "19:  1.2513e+05  7.9283e+05  2e+05  9e-03  6e-15\n",
+      "20:  3.1189e+05  1.0806e+06  3e+05  7e-03  6e-15\n",
+      "21:  9.0177e+05  1.4571e+06  3e+05  4e-03  6e-15\n",
+      "22:  1.0818e+06  1.4901e+06  3e+05  3e-03  5e-15\n",
+      "23:  1.1163e+06  1.4932e+06  3e+05  2e-03  5e-15\n",
+      "24:  1.2857e+06  1.5227e+06  2e+05  2e-03  5e-15\n",
+      "25:  1.4310e+06  1.5355e+06  2e+05  9e-04  5e-15\n",
+      "26:  1.5033e+06  1.5652e+06  1e+05  5e-04  5e-15\n",
+      "27:  1.5189e+06  1.6058e+06  1e+05  4e-04  5e-15\n",
+      "28:  1.6217e+06  1.7236e+06  7e+04  2e-04  9e-15\n",
+      "29:  1.7338e+06  1.7655e+06  3e+04  4e-05  4e-14\n",
+      "30:  1.7569e+06  1.7645e+06  2e+04  2e-05  5e-14\n",
+      "31:  1.7653e+06  1.7671e+06  1e+04  1e-05  3e-14\n",
+      "32:  1.7685e+06  1.7685e+06  1e+04  7e-06  2e-14\n",
+      "33:  1.7712e+06  1.7700e+06  8e+03  4e-06  2e-14\n",
+      "34:  1.7726e+06  1.7714e+06  5e+03  2e-06  2e-14\n",
+      "35:  1.7731e+06  1.7722e+06  3e+03  1e-06  1e-14\n",
+      "36:  1.7733e+06  1.7726e+06  2e+03  8e-07  1e-14\n",
+      "37:  1.7735e+06  1.7728e+06  2e+03  5e-07  1e-14\n",
+      "38:  1.7735e+06  1.7730e+06  1e+03  3e-07  1e-14\n",
+      "39:  1.7736e+06  1.7732e+06  8e+02  2e-07  1e-14\n",
+      "40:  1.7736e+06  1.7733e+06  5e+02  1e-07  1e-14\n",
+      "41:  1.7736e+06  1.7734e+06  3e+02  1e-07  1e-14\n",
+      "42:  1.7736e+06  1.7735e+06  2e+02  5e-08  1e-14\n",
+      "43:  1.7736e+06  1.7736e+06  6e+01  2e-08  1e-14\n",
+      "44:  1.7736e+06  1.7736e+06  3e+01  7e-09  1e-14\n",
+      "45:  1.7736e+06  1.7736e+06  2e+00  6e-10  1e-14\n",
+      "46:  1.7736e+06  1.7736e+06  5e-02  1e-11  1e-14\n",
       "Optimal solution found.\n",
       "optimal\n",
-      "using time:  595.2410299777985\n",
-      "8410.54422946676\n"
+      "using time:  313.93640899658203\n",
+      "2964.0456104602504\n"
      ]
     }
    ],
@@ -316,30 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.69565477  0.25541149 -0.         -0.          0.00075911 -0.\n",
-      "  -0.         -0.          0.04817463 -0.         -0.        ]\n",
-      " [ 0.95126502 -0.         -0.         -0.          0.00083199 -0.\n",
-      "  -0.          0.03160789  0.0162951  -0.         -0.        ]\n",
-      " [ 0.89918053  0.05115589 -0.          0.00047554  0.00148976 -0.\n",
-      "  -0.          0.0476638  -0.          0.00003448 -0.        ]]\n",
-      "925.0622047814459\n",
-      "0.9999999983436882\n",
-      "6669.0\n"
+      "[[ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      "   0.          0.          0.          0.         -0.        ]\n",
+      " [ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      "   0.          0.          0.          0.         -0.        ]\n",
+      " [ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      "   0.          0.          0.          0.         -0.        ]]\n",
+      "6.394437007279925e-19\n",
+      "1.2532906109401274e-10\n"
      ]
     }
    ],
    "source": [
     "print (res.reshape((-1, len(endmembers)))[:3]) ### should have same zeros as initial input.\n",
-    "print (res.ravel()[grad_zero_indices].sum()) ### should be zero\n",
-    "print (res.ravel()[grad_zero_indices].max()) ### should be zero\n",
-    "print (res.sum())"
+    "print ((col_major(res)[grad_zero_indices]).sum()) ### should be zero\n",
+    "print ((col_major(res)[grad_zero_indices]).max()) ### should be zero"
    ]
   },
   {
@@ -351,8 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9981385998520108e-32\n",
-      "-2.1024939075667804e-11 0.9999999983436882\n"
+      "1.736796635168749e-32\n",
+      "-5.112378641862516e-12 0.9999999529379339\n"
      ]
     }
    ],
@@ -363,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563028302.3574197\n"
+      "219569744.02383474\n"
      ]
     }
    ],
@@ -382,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -564,13 +511,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
